@@ -3295,7 +3295,10 @@ dc1394_get_bandwidth_usage(raw1394handle_t handle, nodeid_t node, unsigned int *
       return DC1394_FAILURE;
     
     // mutiply by 4 anyway because the best speed is SPEED_400 only
-    *bandwidth = qpp * 4 * (0x1 << (SPEED_400-speed));
+    if (speed>=SPEED_1600)
+      *bandwidth = qpp << (SPEED_1600-speed));
+    else
+      *bandwidth = qpp >> (speed-SPEED_1600));
   }
   else {
     *bandwidth=0;
